Tagged users gui no longer has background by default - added setting to allow for this. Tweaked autocomplete css and turned off setting by default. Autocomplete will now show the `exact` match result when they are different case Fixed shift key on autocomplete.

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -499,9 +499,11 @@ a {
 
 /* Tagging */
 .msg-tagged {
-    background-color: $color-chat-tagged;
     position: relative;
     padding-left: 7px;
+}
+.pref-taggedvisibility .msg-tagged {
+    background-color: $color-chat-tagged;
 }
 .msg-tagged:before {
     position: absolute;
@@ -543,6 +545,7 @@ a {
 .msg-tagged-black:before {
     background-color: $color-black;
 }
+
 
 /* Historical messages */
 .msg-historical {
@@ -586,6 +589,9 @@ a {
     time, .continue {
         color: $color-chat-text3;
     }
+}
+.pref-taggedvisibility .msg-highlight {
+    background-color: $color-chat-highlight;
 }
 
 /* Focus or highlight a line */
@@ -771,7 +777,7 @@ a {
         display: inline-block;
         font-size: 13px;
         color: $color-chat-text3;
-        background: $color-surface-dark3;
+        background: rgba($color-surface-dark1, 0.75);
 
         &:first-child {
             border-radius: 3px 0 0 0;
